force-app/main/default/objects/Peak_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Tasks__c</fullName>
        <label>Completed Tasks</label>
        <summaryFilterItems>
            <field>Peak_Checklist_Task__c.Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Peak_Checklist_Task__c.Peak_Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>Completed_Tasks__c  =  Number_of_Tasks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks__c</fullName>
        <label>Number of Tasks</label>
        <summaryForeignKey>Peak_Checklist_Task__c.Peak_Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Peak_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Peak Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0}</displayFormat>
        <label>Peak Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Peak Checklists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>